--- a/styles/main.css
+++ b/styles/main.css
@@ -76,37 +76,19 @@ a {
 /* custom */
 
 :root {
-  /* sub-heading at the top of the app UI */
   --PaleViolet: hsl(276, 100%, 81%);
-  /* chat on the left */
   --ModerateViolet: hsl(275.8, 56.9%, 41%);
-  /* chat on the right */
   --DesaturatedDarkViolet: hsl(271, 15%, 43%);
-  /* placeholder text */
   --GrayishBlue: hsl(206, 6%, 79%);
-  /* main heading */
   --VeryDarkDesaturatedViolet: hsl(271, 36%, 24%);
-  /* paragraph */
-  --DarkGrayishViolet: hsl(267.7, 5.3%, 47.6%);
+  --DarkGrayishViolet: hsl(267, 6%, 36%);
 
-  /* #### Gradients */
-
-  /* These two colors are the vibrant background colors you see throughout the design
-   and are applied as a linear gradient: */
-
-  /* --Gradient1: hsl(293, 100%, 63%); old */
   --Gradient1: hsl(293, 79.6%, 55.7%);
-  /* --Gradient2: hsl(264, 100%, 61%); old */
   --Gradient2: hsl(264.3, 87.3%, 40%);
 
-  /* ### Secondary */
-
   --White: hsl(0, 0%, 100%);
-  /* app background */
   --LightGrayishViolet: hsl(270, 20%, 96%);
-  /* submit button background */
   --VeryDarkDesaturatedViolet: hsl(271, 36%, 24%);
-  /* radio button outline */
   --VeryLightMagenta: hsl(289, 100%, 72%);
 
   --fontgrow: clamp(0.5rem, calc(12px + 0.278625vw), 1rem);
@@ -124,8 +106,8 @@ h1 {
 }
 
 p {
-  line-height: 1.8;
   font-size: 1rem;
+  line-height: 1.8;
   color: var(--DarkGrayishViolet);
 }
 
@@ -136,40 +118,49 @@ html {
   background-color: var(--White);
   height: 100%;
   width: 100%;
-  /* background: url(/design/desktop-design.jpg) no-repeat center center;
-  opacity: 0.5; */
   font-family: "Rubik", sans-serif;
-  /* font-size: var(--fontgrow); */
+  font-size: var(--fontgrow);
 }
 
 .background {
+  position: fixed;
+  height: 100%;
+  width: 100%;
+  top: 0;
+  left: 0;
   overflow: hidden;
+  z-index: -2;
+  transition: all 1s;
 }
 
 .bg1 {
   position: absolute;
-  height: 85%;
-  width: 29.3%;
+  height: 88%;
+  width: 800px;
   top: 0;
-  left: 0;
-  border-radius: 0px 0px 211px 211px;
+  left: clamp(-500px, -26.5vw, -350px);
+  border-radius: 0 0 50% 50%;
   background: linear-gradient(
     180deg in oklab,
     var(--Gradient1),
     var(--Gradient2)
   );
   z-index: -2;
+  transition: all 1s;
 }
 
 .bg2 {
   position: absolute;
-  height: 85%;
-  width: 22.5%;
+  height: 88%;
+  width: 800px;
   bottom: 0;
-  right: 0;
-  border-radius: 160px 160px 0 0;
+  /* right: clamp(-33.5vw, -33.5vw, 21.5vw); */
+  right: -33vw;
+  border-radius: 50% 50% 0 0;
   background: var(--LightGrayishViolet);
-  z-index: -3;
+  opacity: 0.9;
+  z-index: -1;
+  transition: all 1s;
 }
 
 main {
@@ -179,6 +170,7 @@ main {
   align-content: center;
   gap: 9.5%;
   margin-left: 11.5%;
+  transition: all 1s;
 }
 
 .phone-container {
@@ -187,7 +179,6 @@ main {
   flex-direction: column;
   min-height: 505px;
   max-height: 800px;
-  /* height: 505px; */
   height: 35vw;
   aspect-ratio: 9 / 18;
   border: 0.5vw solid var(--White);
@@ -195,10 +186,14 @@ main {
   border-radius: 30px;
   font-size: clamp(8px, calc(8px + (100vw - 1440px) * 0.005349), 12.6px);
   line-height: 1.3;
-  box-shadow: 0px 20px 50px 10px rgba(0, 0, 0, 0.26);
+  box-shadow: 0px 20px 50px -10px rgba(0, 0, 0, 0.26);
   animation: float 3s ease-in-out infinite;
   transition: transform 1s ease-in-out;
   z-index: 10;
+
+  &:hover {
+    animation-play-state: paused;
+  }
 }
 
 @keyframes float {
@@ -230,7 +225,7 @@ main {
   height: 30px;
   top: -10px;
   margin-top: -50px;
-  background-color: white;
+  background-color: var(--White);
   margin: auto;
   border-radius: 0px 0px 13px 13px;
   z-index: 10;
@@ -253,7 +248,7 @@ main {
     var(--Gradient1),
     var(--Gradient2)
   );
-  color: white;
+  color: var(--White);
   z-index: -1;
 }
 
@@ -262,12 +257,10 @@ main {
   position: relative;
   justify-content: start;
   align-items: center;
-  height: 9%;
   margin-left: 7%;
   margin-right: 7%;
-  margin-bottom: 4px;
   font-weight: 700;
-  transform: scaleY(2.5);
+  transform: scaleY(2.5) scaleX(1.5);
   cursor: pointer;
 }
 
@@ -309,10 +302,11 @@ p.role {
   position: relative;
   justify-content: end;
   align-items: center;
-  color: white;
+  color: var(--White);
   height: 9%;
   margin-left: 7%;
   margin-right: 7%;
+  font-size: 0.8rem;
   font-weight: 700;
   cursor: pointer;
 }
@@ -365,7 +359,7 @@ input[type="radio"] {
   appearance: none;
   accent-color: var(--VeryLightMagenta);
   font: inherit;
-  color: white;
+  color: var(--White);
   /* height: 50%; */
   aspect-ratio: 1;
   border: 1px solid rgba(255, 255, 255, 0.5);
@@ -382,7 +376,7 @@ input[type="radio"]::before {
   border-radius: 50%;
   transform: scale(0);
   transition: 120ms transform ease-in-out;
-  box-shadow: inset 1em 1em white;
+  box-shadow: inset 1em 1em var(--White);
 }
 
 input[type="radio"]:checked::before {
@@ -468,14 +462,30 @@ input[type="radio"]:checked::before {
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: var(--VeryDarkDesaturatedViolet);
-    color: white;
+    background: var(--VeryDarkDesaturatedViolet);
+    color: var(--White);
     width: 13%;
     height: 79%;
     border-radius: 50%;
     font-size: 1rem;
     font-size: clamp(16px, calc(16px + (100vw - 1440px) * 0.01163), 26px);
     font-weight: 700;
+    cursor: pointer;
+
+    &:hover {
+      background: linear-gradient(
+        90deg in oklab,
+        var(--Gradient1),
+        var(--Gradient2)
+      );
+      animation: linear 1s infinite;
+    }
+  }
+}
+
+@keyframes rotatebg {
+  to {
+    transform: rotate(360deg);
   }
 }
 
@@ -485,4 +495,96 @@ input[type="radio"]:checked::before {
   justify-content: center;
   width: 40%;
   padding-right: 65px;
+}
+
+.happydog {
+  position: absolute;
+  height: 150px;
+  width: 150px;
+  bottom: 0;
+  right: 0;
+  opacity: 0;
+  visibility: hidden;
+  transition: opacity 1s ease-in-out, visibility 1s ease-in-out;
+}
+
+.happydog.show {
+  opacity: 1;
+  visibility: visible;
+}
+
+.walkingdog {
+  position: absolute;
+  height: 50px;
+  width: 50px;
+  bottom: 6%;
+  left: 80%;
+  opacity: 0;
+  visibility: hidden;
+  transition: opacity 1s ease-in-out, visibility 1s ease-in-out;
+}
+
+.walkingdog.show {
+  opacity: 1;
+  visibility: visible;
+  animation: walk 5s linear;
+}
+
+@keyframes walk {
+  0% {
+    left: 0%;
+  }
+
+  100% {
+    left: 80%;
+  }
+}
+
+@media screen and (max-width: 1050px) {
+  main {
+    margin-left: 2%;
+    gap: 10.5%;
+  }
+
+  .content {
+    padding-right: 10px;
+  }
+}
+
+@media screen and (max-width: 800px) {
+  html {
+    height: auto;
+  }
+
+  .bg1 {
+    height: 55%;
+    width: 101%;
+    left: -50%;
+    border-radius: 0 0 50% 50%;
+  }
+
+  .bg2 {
+    height: 55%;
+    width: 101%;
+    right: -50%;
+    border-radius: 50% 50% 0 0;
+  }
+
+  main {
+    flex-direction: column;
+    align-items: center;
+    padding-block: 50px;
+  }
+
+  .phone-container {
+    height: auto;
+    width: 275px;
+  }
+
+  .content {
+    text-align: center;
+    margin-inline: 10px;
+    margin-top: 50px;
+    width: 32ch;
+  }
 }
