--- a/styles/main.css
+++ b/styles/main.css
@@ -98,6 +98,10 @@ a {
 
 /* custom end */
 
+::selection {
+  color: var(--VeryLightMagenta);
+}
+
 h1 {
   font-size: 2.5rem;
   font-weight: 500;
@@ -146,21 +150,22 @@ html {
     var(--Gradient2)
   );
   z-index: -2;
-  transition: all 1s;
+  transition: left 1s, height 1s, width 1s;
 }
 
 .bg2 {
+  content: "";
   position: absolute;
   height: 88%;
   width: 800px;
   bottom: 0;
-  /* right: clamp(-33.5vw, -33.5vw, 21.5vw); */
-  right: -33vw;
-  border-radius: 50% 50% 0 0;
+  right: clamp(-500px, -26.5vw, -350px);
+  rotate: 180deg;
+  border-radius: 0 0 50% 50%;
   background: var(--LightGrayishViolet);
   opacity: 0.9;
-  z-index: -1;
-  transition: all 1s;
+  z-index: -2;
+  transition: right 1s, height 1s, width 1s;
 }
 
 main {
@@ -182,12 +187,13 @@ main {
   height: 35vw;
   aspect-ratio: 9 / 18;
   border: 0.5vw solid var(--White);
-  border-width: clamp(10px, 0.5vw, 1vw);
+  border-width: clamp(10px, 0.5vw, 12px);
   border-radius: 30px;
   font-size: clamp(8px, calc(8px + (100vw - 1440px) * 0.005349), 12.6px);
   line-height: 1.3;
   box-shadow: 0px 20px 50px -10px rgba(0, 0, 0, 0.26);
   animation: float 3s ease-in-out infinite;
+  animation-delay: 8s;
   transition: transform 1s ease-in-out;
   z-index: 10;
 
@@ -236,6 +242,7 @@ main {
   position: relative;
   align-items: center;
   justify-content: flex-start;
+  color: var(--White);
   top: -30px;
   padding-top: 15px;
   padding-top: 5%;
@@ -248,7 +255,6 @@ main {
     var(--Gradient1),
     var(--Gradient2)
   );
-  color: var(--White);
   z-index: -1;
 }
 
@@ -262,6 +268,10 @@ main {
   font-weight: 700;
   transform: scaleY(2.5) scaleX(1.5);
   cursor: pointer;
+
+  &::selection {
+    color: inherit;
+  }
 }
 
 .menu-avatar {
@@ -309,11 +319,13 @@ p.role {
   font-size: 0.8rem;
   font-weight: 700;
   cursor: pointer;
+
+  &::selection {
+    color: inherit;
+  }
 }
 
 .chat-container {
-  /* display: flex;
-  flex-direction: column; */
   position: relative;
   height: 72%;
   top: -15px;
@@ -360,7 +372,6 @@ input[type="radio"] {
   accent-color: var(--VeryLightMagenta);
   font: inherit;
   color: var(--White);
-  /* height: 50%; */
   aspect-ratio: 1;
   border: 1px solid rgba(255, 255, 255, 0.5);
   border-radius: 50%;
@@ -386,11 +397,6 @@ input[type="radio"]:checked::before {
 .special-detail {
   display: flex;
   color: var(--White);
-
-  /* &::before {
-    content: '-';
-    margin-right: 10px;
-  } */
 }
 
 .special-price {
@@ -436,6 +442,7 @@ input[type="radio"]:checked::before {
     width: 20%;
     border-radius: 10px;
     aspect-ratio: 1 / 1;
+    cursor: pointer;
   }
 }
 
@@ -453,10 +460,7 @@ input[type="radio"]:checked::before {
   left: 5%;
   border-radius: 25px;
   justify-content: space-between;
-
-  .send-message {
-    color: #737373;
-  }
+  color: var(--DarkGrayishViolet);
 
   .send-arrow {
     display: flex;
@@ -478,14 +482,7 @@ input[type="radio"]:checked::before {
         var(--Gradient1),
         var(--Gradient2)
       );
-      animation: linear 1s infinite;
     }
-  }
-}
-
-@keyframes rotatebg {
-  to {
-    transform: rotate(360deg);
   }
 }
 
@@ -499,8 +496,8 @@ input[type="radio"]:checked::before {
 
 .happydog {
   position: absolute;
-  height: 150px;
-  width: 150px;
+  height: 300px;
+  width: 300px;
   bottom: 0;
   right: 0;
   opacity: 0;
@@ -540,6 +537,11 @@ input[type="radio"]:checked::before {
   }
 }
 
+.phone-element {
+  opacity: 1;
+  transition: opacity 0.5s ease-in-out;
+}
+
 @media screen and (max-width: 1050px) {
   main {
     margin-left: 2%;
@@ -560,14 +562,12 @@ input[type="radio"]:checked::before {
     height: 55%;
     width: 101%;
     left: -50%;
-    border-radius: 0 0 50% 50%;
   }
 
   .bg2 {
     height: 55%;
     width: 101%;
     right: -50%;
-    border-radius: 50% 50% 0 0;
   }
 
   main {
@@ -586,5 +586,10 @@ input[type="radio"]:checked::before {
     margin-inline: 10px;
     margin-top: 50px;
     width: 32ch;
+  }
+
+  .happydog {
+    height: 150px;
+    width: 150px;
   }
 }
